# sspm_c

./: .cproject  CMakeLists.txt  Makefile  README.txt  makefile.txt
App/: App.cpp  App.h  Enclave_u.c  Enclave_u.h  SSPM.cpp
App/TrustedLibrary/: Libcxx.cpp
Enclave/: Enclave.cpp  Enclave.edl
Enclave/TrustedLibrary/: Ecalls.cpp
